feat: attribution update